2013-02-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: set udppacketsize to 1240, which is small enough
   that packet fragmentation will not normally occur; use DNS txtdata()
   method on versions of Net::DNS that support it. (This patch contributed
   by Mark Martinec.)

2013-02-04: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: set default udppacketsize to 2048, which seems
   to be the suggested value to use in the Net::DNS documentation.

2013-02-04: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm: avoid an 'uninitialized value' warning when
   signature being verified is missing a d= tag; accept a selector name
   of '0' rather than treating it as if the s= tag was missing
 * lib/Mail/DKIM/PublicKey.pm: sanity check selector/domain before
   attempting a DNS query (this fixes another 'uninitialized value' warning)
 * lib/Mail/DKIM/Signature.pm: avoid an 'uninitialized value' warning when
   calling identity() and d= tag is missing

2013-02-04: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: construct a default RESOLVER that sets
   udppacketsize to 1280. This enables EDNS0 (extension mechanism for DNS),
   allowing Mail::DKIM to handle larger keys.

2012-11-28: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: replace use of query() with send(), since it
   is never appropriate to append the default domain, and using send()
   paves the way to using bgsend() in the future for async dns.
   Contributed by Mark Martinec.
 * lib/Mail/DKIM/DNS.pm: add global variable $RESOLVER which the
   user can override if they want to specify options to Net::DNS.

2012-11-28: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/MessageParser.pm: rewrite of line parsing logic to
   avoid unnecessary copying of the internal buffer. This replaces use
   of $self->{buf} with ${$self->{buf_ref}} in many places. Patch
   contributed by Mark Martinec.

2012-11-28: Jason Long <jlong@messiah.edu>