@@ -1,4 +1,10 @@
 2013-02-06: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/DNS.pm: revert change that enabled EDNS0 by default;
+   provide enable_EDNS0() subroutine for enabling EDNS0
+ * scripts/dkimverify.pl: sample verification script updated to enable
+   EDNS0 before performing the verification
+
+2013-02-06: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/DNS.pm: set udppacketsize to 1240, which is small enough
    that packet fragmentation will not normally occur; use DNS txtdata()
    method on versions of Net::DNS that support it. (This patch contributed
